Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-77

Possible deadlock in innodb buffer pool on Windows

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Critical
    • Resolution: Done
    • 5.5.20, 5.3.4, 5.5(EOL), 10.0(EOL), 10.1(EOL), 10.2(EOL)
    • 5.3.4
    • None

    Description

      With current asynchronous IO handling, it is possible to deadlock Innodb. The deadlock can happen in the case all Innodb IO threads are handling completion of async reads, and as part of completion routine do insert buffer processing merges. Attachment contains callstacks taken from the process dump in one such case (note all IO threads are blocked waiting for a buffer pool page)

      Attachments

        Issue Links

          Activity

            People

              wlad Vladislav Vaintroub
              wlad Vladislav Vaintroub
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - 0d
                  0d
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 1d
                  1d

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.